# dnse-openapi-sdk

./: GITFLOW.md
.agents/knowledge/: core_enums.md  rest_api_market_data.md  rest_api_trading.md  websocket_protocol.md
.github/workflows/: ci.yml  release.yml  sync-upstream.yml
go/: go.mod  go.sum
go/dnse/: api_account.go  api_auth.go  api_market.go  api_orders.go  auth.go  client.go
go/examples/: main.go
go/websocket/: auth.go  client.go  dispatcher.go  flex.go  models.go  serializer.go  subscriptions.go  transport.go
python/: README.md
python/dnse/: client.py
python/trading-api/: get_close_price.py
python/websocket-marketdata/: foreign_investor.py  ohlc.py  ohlc_closed.py  quote.py  sec_def.py  trade.py  trade_extra.py
python/websocket-marketdata/trading_websocket/: client.py  connection.py  models.py
rust/: Cargo.toml
rust/examples/: demo.rs
rust/src/: lib.rs
rust/src/rest/: api_account.rs  api_auth.rs  api_market.rs  api_orders.rs  auth.rs  client.rs  mod.rs
rust/src/websocket/: auth.rs  client.rs  dispatcher.rs  mod.rs  models.rs  serializer.rs  subscriptions.rs  transport.rs
