[package]
name = "dnse-openapi-sdk"
version = "0.1.3"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
url = "2.5"
uuid = { version = "1.8", features = ["v4"] }
chrono = "0.4"
log = "0.4"
hex = "0.4.3"
async-trait = "0.1.89"
